etapa5/y.output
   0  $accept : program $end

   1  program : declarationList

   2  declarationList : variableDeclaration declarationList
   3                  | functDeclaration declarationList
   4                  | variableDeclaration
   5                  | functDeclaration

   6  variableDeclaration : type IDENTIFIER ':' BOOL_LIT ';'
   7                      | type IDENTIFIER ':' INT_LIT ';'
   8                      | type IDENTIFIER ':' CHAR_LIT ';'
   9                      | type IDENTIFIER ':' STRING ';'
  10                      | type IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals ';'
  11                      | type IDENTIFIER '[' INT_LIT ']' ';'

  12  arrayInitLiterals : BOOL_LIT arrayInitLiterals
  13                    | INT_LIT arrayInitLiterals
  14                    | CHAR_LIT arrayInitLiterals
  15                    | STRING arrayInitLiterals
  16                    | IDENTIFIER arrayInitLiterals
  17                    |

  18  functDeclaration : type IDENTIFIER '(' functParamsDef ')' commandBlock ';'

  19  functParamsDef : type IDENTIFIER functParamsDefCont
  20                 |

  21  functParamsDefCont : ',' type IDENTIFIER functParamsDefCont
  22                     |

  23  commandBlock : '{' commandBlockList '}'

  24  commandBlockList : command ';' commandBlockListCont

  25  commandBlockListCont : command ';' commandBlockListCont
  26                       |

  27  command : PRINT printList
  28          | RETURN expression
  29          | READ IDENTIFIER
  30          | IDENTIFIER '=' expression
  31          | IDENTIFIER '[' expression ']' '=' expression
  32          | IF '(' expression ')' THEN command ELSE command
  33          | IF '(' expression ')' THEN command
  34          | FOR '(' expression ')' command
  35          | FOR '(' IDENTIFIER '=' expression TO expression ')' command
  36          | commandBlock
  37          |

  38  printList : STRING printList
  39            | expression printList
  40            |

  41  functCall : IDENTIFIER '(' functParams ')'

  42  functParams : IDENTIFIER functParamsCont
  43              | INT_LIT functParamsCont
  44              | CHAR_LIT functParamsCont
  45              | STRING functParamsCont
  46              | BOOL_LIT functParamsCont

  47  functParamsCont : ',' functParams
  48                  |

  49  expression : '(' expression ')'
  50             | functCall
  51             | INT_LIT
  52             | CHAR_LIT
  53             | BOOL_LIT
  54             | IDENTIFIER
  55             | IDENTIFIER '[' expression ']'
  56             | expression EQUAL expression
  57             | expression DIFFERENT expression
  58             | expression LESS_THEN expression
  59             | expression GREATHER_THEN expression
  60             | expression OR expression
  61             | expression AND expression
  62             | expression '+' expression
  63             | expression '-' expression
  64             | expression '/' expression
  65             | expression '*' expression

  66  type : KW_INT
  67       | KW_CHAR
  68       | KW_BOOL
  69       | KW_REAL

state 0
	$accept : . program $end  (0)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	.  error

	program  goto 5
	declarationList  goto 6
	variableDeclaration  goto 7
	functDeclaration  goto 8
	type  goto 9


state 1
	type : KW_INT .  (66)

	.  reduce 66


state 2
	type : KW_CHAR .  (67)

	.  reduce 67


state 3
	type : KW_BOOL .  (68)

	.  reduce 68


state 4
	type : KW_REAL .  (69)

	.  reduce 69


state 5
	$accept : program . $end  (0)

	$end  accept


state 6
	program : declarationList .  (1)

	.  reduce 1


state 7
	declarationList : variableDeclaration . declarationList  (2)
	declarationList : variableDeclaration .  (4)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	$end  reduce 4

	declarationList  goto 10
	variableDeclaration  goto 7
	functDeclaration  goto 8
	type  goto 9


state 8
	declarationList : functDeclaration . declarationList  (3)
	declarationList : functDeclaration .  (5)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	$end  reduce 5

	declarationList  goto 11
	variableDeclaration  goto 7
	functDeclaration  goto 8
	type  goto 9


state 9
	variableDeclaration : type . IDENTIFIER ':' BOOL_LIT ';'  (6)
	variableDeclaration : type . IDENTIFIER ':' INT_LIT ';'  (7)
	variableDeclaration : type . IDENTIFIER ':' CHAR_LIT ';'  (8)
	variableDeclaration : type . IDENTIFIER ':' STRING ';'  (9)
	variableDeclaration : type . IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals ';'  (10)
	variableDeclaration : type . IDENTIFIER '[' INT_LIT ']' ';'  (11)
	functDeclaration : type . IDENTIFIER '(' functParamsDef ')' commandBlock ';'  (18)

	IDENTIFIER  shift 12
	.  error


state 10
	declarationList : variableDeclaration declarationList .  (2)

	.  reduce 2


state 11
	declarationList : functDeclaration declarationList .  (3)

	.  reduce 3


state 12
	variableDeclaration : type IDENTIFIER . ':' BOOL_LIT ';'  (6)
	variableDeclaration : type IDENTIFIER . ':' INT_LIT ';'  (7)
	variableDeclaration : type IDENTIFIER . ':' CHAR_LIT ';'  (8)
	variableDeclaration : type IDENTIFIER . ':' STRING ';'  (9)
	variableDeclaration : type IDENTIFIER . '[' INT_LIT ']' ':' arrayInitLiterals ';'  (10)
	variableDeclaration : type IDENTIFIER . '[' INT_LIT ']' ';'  (11)
	functDeclaration : type IDENTIFIER . '(' functParamsDef ')' commandBlock ';'  (18)

	':'  shift 13
	'['  shift 14
	'('  shift 15
	.  error


state 13
	variableDeclaration : type IDENTIFIER ':' . BOOL_LIT ';'  (6)
	variableDeclaration : type IDENTIFIER ':' . INT_LIT ';'  (7)
	variableDeclaration : type IDENTIFIER ':' . CHAR_LIT ';'  (8)
	variableDeclaration : type IDENTIFIER ':' . STRING ';'  (9)

	CHAR_LIT  shift 16
	INT_LIT  shift 17
	BOOL_LIT  shift 18
	STRING  shift 19
	.  error


state 14
	variableDeclaration : type IDENTIFIER '[' . INT_LIT ']' ':' arrayInitLiterals ';'  (10)
	variableDeclaration : type IDENTIFIER '[' . INT_LIT ']' ';'  (11)

	INT_LIT  shift 20
	.  error


state 15
	functDeclaration : type IDENTIFIER '(' . functParamsDef ')' commandBlock ';'  (18)
	functParamsDef : .  (20)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	')'  reduce 20

	functParamsDef  goto 21
	type  goto 22


state 16
	variableDeclaration : type IDENTIFIER ':' CHAR_LIT . ';'  (8)

	';'  shift 23
	.  error


state 17
	variableDeclaration : type IDENTIFIER ':' INT_LIT . ';'  (7)

	';'  shift 24
	.  error


state 18
	variableDeclaration : type IDENTIFIER ':' BOOL_LIT . ';'  (6)

	';'  shift 25
	.  error


state 19
	variableDeclaration : type IDENTIFIER ':' STRING . ';'  (9)

	';'  shift 26
	.  error


state 20
	variableDeclaration : type IDENTIFIER '[' INT_LIT . ']' ':' arrayInitLiterals ';'  (10)
	variableDeclaration : type IDENTIFIER '[' INT_LIT . ']' ';'  (11)

	']'  shift 27
	.  error


state 21
	functDeclaration : type IDENTIFIER '(' functParamsDef . ')' commandBlock ';'  (18)

	')'  shift 28
	.  error


state 22
	functParamsDef : type . IDENTIFIER functParamsDefCont  (19)

	IDENTIFIER  shift 29
	.  error


state 23
	variableDeclaration : type IDENTIFIER ':' CHAR_LIT ';' .  (8)

	.  reduce 8


state 24
	variableDeclaration : type IDENTIFIER ':' INT_LIT ';' .  (7)

	.  reduce 7


state 25
	variableDeclaration : type IDENTIFIER ':' BOOL_LIT ';' .  (6)

	.  reduce 6


state 26
	variableDeclaration : type IDENTIFIER ':' STRING ';' .  (9)

	.  reduce 9


state 27
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' . ':' arrayInitLiterals ';'  (10)
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' . ';'  (11)

	':'  shift 30
	';'  shift 31
	.  error


state 28
	functDeclaration : type IDENTIFIER '(' functParamsDef ')' . commandBlock ';'  (18)

	'{'  shift 32
	.  error

	commandBlock  goto 33


state 29
	functParamsDef : type IDENTIFIER . functParamsDefCont  (19)
	functParamsDefCont : .  (22)

	','  shift 34
	')'  reduce 22

	functParamsDefCont  goto 35


state 30
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ':' . arrayInitLiterals ';'  (10)
	arrayInitLiterals : .  (17)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 17

	arrayInitLiterals  goto 41


state 31
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ';' .  (11)

	.  reduce 11


state 32
	commandBlock : '{' . commandBlockList '}'  (23)
	command : .  (37)

	READ  shift 42
	PRINT  shift 43
	RETURN  shift 44
	FOR  shift 45
	IF  shift 46
	IDENTIFIER  shift 47
	'{'  shift 32
	';'  reduce 37

	commandBlock  goto 48
	commandBlockList  goto 49
	command  goto 50


state 33
	functDeclaration : type IDENTIFIER '(' functParamsDef ')' commandBlock . ';'  (18)

	';'  shift 51
	.  error


state 34
	functParamsDefCont : ',' . type IDENTIFIER functParamsDefCont  (21)

	KW_INT  shift 1
	KW_CHAR  shift 2
	KW_BOOL  shift 3
	KW_REAL  shift 4
	.  error

	type  goto 52


state 35
	functParamsDef : type IDENTIFIER functParamsDefCont .  (19)

	.  reduce 19


state 36
	arrayInitLiterals : CHAR_LIT . arrayInitLiterals  (14)
	arrayInitLiterals : .  (17)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 17

	arrayInitLiterals  goto 53


state 37
	arrayInitLiterals : INT_LIT . arrayInitLiterals  (13)
	arrayInitLiterals : .  (17)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 17

	arrayInitLiterals  goto 54


state 38
	arrayInitLiterals : BOOL_LIT . arrayInitLiterals  (12)
	arrayInitLiterals : .  (17)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 17

	arrayInitLiterals  goto 55


state 39
	arrayInitLiterals : IDENTIFIER . arrayInitLiterals  (16)
	arrayInitLiterals : .  (17)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 17

	arrayInitLiterals  goto 56


state 40
	arrayInitLiterals : STRING . arrayInitLiterals  (15)
	arrayInitLiterals : .  (17)

	CHAR_LIT  shift 36
	INT_LIT  shift 37
	BOOL_LIT  shift 38
	IDENTIFIER  shift 39
	STRING  shift 40
	';'  reduce 17

	arrayInitLiterals  goto 57


state 41
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals . ';'  (10)

	';'  shift 58
	.  error


state 42
	command : READ . IDENTIFIER  (29)

	IDENTIFIER  shift 59
	.  error


state 43
	command : PRINT . printList  (27)
	printList : .  (40)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	STRING  shift 64
	'('  shift 65
	ELSE  reduce 40
	';'  reduce 40

	printList  goto 66
	functCall  goto 67
	expression  goto 68


state 44
	command : RETURN . expression  (28)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 69


state 45
	command : FOR . '(' expression ')' command  (34)
	command : FOR . '(' IDENTIFIER '=' expression TO expression ')' command  (35)

	'('  shift 70
	.  error


state 46
	command : IF . '(' expression ')' THEN command ELSE command  (32)
	command : IF . '(' expression ')' THEN command  (33)

	'('  shift 71
	.  error


state 47
	command : IDENTIFIER . '=' expression  (30)
	command : IDENTIFIER . '[' expression ']' '=' expression  (31)

	'['  shift 72
	'='  shift 73
	.  error


state 48
	command : commandBlock .  (36)

	.  reduce 36


state 49
	commandBlock : '{' commandBlockList . '}'  (23)

	'}'  shift 74
	.  error


state 50
	commandBlockList : command . ';' commandBlockListCont  (24)

	';'  shift 75
	.  error


state 51
	functDeclaration : type IDENTIFIER '(' functParamsDef ')' commandBlock ';' .  (18)

	.  reduce 18


state 52
	functParamsDefCont : ',' type . IDENTIFIER functParamsDefCont  (21)

	IDENTIFIER  shift 76
	.  error


state 53
	arrayInitLiterals : CHAR_LIT arrayInitLiterals .  (14)

	.  reduce 14


state 54
	arrayInitLiterals : INT_LIT arrayInitLiterals .  (13)

	.  reduce 13


state 55
	arrayInitLiterals : BOOL_LIT arrayInitLiterals .  (12)

	.  reduce 12


state 56
	arrayInitLiterals : IDENTIFIER arrayInitLiterals .  (16)

	.  reduce 16


state 57
	arrayInitLiterals : STRING arrayInitLiterals .  (15)

	.  reduce 15


state 58
	variableDeclaration : type IDENTIFIER '[' INT_LIT ']' ':' arrayInitLiterals ';' .  (10)

	.  reduce 10


state 59
	command : READ IDENTIFIER .  (29)

	.  reduce 29


state 60
	expression : CHAR_LIT .  (52)

	.  reduce 52


state 61
	expression : INT_LIT .  (51)

	.  reduce 51


state 62
	expression : BOOL_LIT .  (53)

	.  reduce 53


63: shift/reduce conflict (shift 78, reduce 54) on '('
state 63
	functCall : IDENTIFIER . '(' functParams ')'  (41)
	expression : IDENTIFIER .  (54)
	expression : IDENTIFIER . '[' expression ']'  (55)

	'['  shift 77
	'('  shift 78
	TO  reduce 54
	ELSE  reduce 54
	EQUAL  reduce 54
	DIFFERENT  reduce 54
	LESS_THEN  reduce 54
	GREATHER_THEN  reduce 54
	OR  reduce 54
	AND  reduce 54
	CHAR_LIT  reduce 54
	INT_LIT  reduce 54
	BOOL_LIT  reduce 54
	IDENTIFIER  reduce 54
	STRING  reduce 54
	'-'  reduce 54
	'+'  reduce 54
	'/'  reduce 54
	'*'  reduce 54
	';'  reduce 54
	']'  reduce 54
	')'  reduce 54


state 64
	printList : STRING . printList  (38)
	printList : .  (40)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	STRING  shift 64
	'('  shift 65
	ELSE  reduce 40
	';'  reduce 40

	printList  goto 79
	functCall  goto 67
	expression  goto 68


state 65
	expression : '(' . expression ')'  (49)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 80


state 66
	command : PRINT printList .  (27)

	.  reduce 27


state 67
	expression : functCall .  (50)

	.  reduce 50


state 68
	printList : expression . printList  (39)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)
	printList : .  (40)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	STRING  shift 64
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	'('  shift 65
	ELSE  reduce 40
	';'  reduce 40

	printList  goto 91
	functCall  goto 67
	expression  goto 68


state 69
	command : RETURN expression .  (28)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	ELSE  reduce 28
	';'  reduce 28


state 70
	command : FOR '(' . expression ')' command  (34)
	command : FOR '(' . IDENTIFIER '=' expression TO expression ')' command  (35)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 92
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 93


state 71
	command : IF '(' . expression ')' THEN command ELSE command  (32)
	command : IF '(' . expression ')' THEN command  (33)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 94


state 72
	command : IDENTIFIER '[' . expression ']' '=' expression  (31)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 95


state 73
	command : IDENTIFIER '=' . expression  (30)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 96


state 74
	commandBlock : '{' commandBlockList '}' .  (23)

	.  reduce 23


state 75
	commandBlockList : command ';' . commandBlockListCont  (24)
	commandBlockListCont : .  (26)
	command : .  (37)

	READ  shift 42
	PRINT  shift 43
	RETURN  shift 44
	FOR  shift 45
	IF  shift 46
	IDENTIFIER  shift 47
	'{'  shift 32
	';'  reduce 37
	'}'  reduce 26

	commandBlock  goto 48
	commandBlockListCont  goto 97
	command  goto 98


state 76
	functParamsDefCont : ',' type IDENTIFIER . functParamsDefCont  (21)
	functParamsDefCont : .  (22)

	','  shift 34
	')'  reduce 22

	functParamsDefCont  goto 99


state 77
	expression : IDENTIFIER '[' . expression ']'  (55)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 100


state 78
	functCall : IDENTIFIER '(' . functParams ')'  (41)

	CHAR_LIT  shift 101
	INT_LIT  shift 102
	BOOL_LIT  shift 103
	IDENTIFIER  shift 104
	STRING  shift 105
	.  error

	functParams  goto 106


state 79
	printList : STRING printList .  (38)

	.  reduce 38


state 80
	expression : '(' expression . ')'  (49)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	')'  shift 107
	.  error


state 81
	expression : expression EQUAL . expression  (56)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 108


state 82
	expression : expression DIFFERENT . expression  (57)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 109


state 83
	expression : expression LESS_THEN . expression  (58)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 110


state 84
	expression : expression GREATHER_THEN . expression  (59)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 111


state 85
	expression : expression OR . expression  (60)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 112


state 86
	expression : expression AND . expression  (61)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 113


state 87
	expression : expression '-' . expression  (63)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 114


state 88
	expression : expression '+' . expression  (62)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 115


state 89
	expression : expression '/' . expression  (64)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 116


state 90
	expression : expression '*' . expression  (65)

	CHAR_LIT  shift 60
	INT_LIT  shift 61
	BOOL_LIT  shift 62
	IDENTIFIER  shift 63
	'('  shift 65
	.  error

	functCall  goto 67
	expression  goto 117


state 91
	printList : expression printList .  (39)

	.  reduce 39


state 92
	command : FOR '(' IDENTIFIER . '=' expression TO expression ')' command  (35)
	functCall : IDENTIFIER . '(' functParams ')'  (41)
	expression : IDENTIFIER .  (54)
	expression : IDENTIFIER . '[' expression ']'  (55)

	'['  shift 77
	'('  shift 78
	'='  shift 118
	EQUAL  reduce 54
	DIFFERENT  reduce 54
	LESS_THEN  reduce 54
	GREATHER_THEN  reduce 54
	OR  reduce 54
	AND  reduce 54
	'-'  reduce 54
	'+'  reduce 54
	'/'  reduce 54
	'*'  reduce 54
	')'  reduce 54


state 93
	command : FOR '(' expression . ')' command  (34)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	')'  shift 119
	.  error


state 94
	command : IF '(' expression . ')' THEN command ELSE command  (32)
	command : IF '(' expression . ')' THEN command  (33)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	')'  shift 120
	.  error


state 95
	command : IDENTIFIER '[' expression . ']' '=' expression  (31)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	']'  shift 121
	.  error


state 96
	command : IDENTIFIER '=' expression .  (30)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	ELSE  reduce 30
	';'  reduce 30


state 97
	commandBlockList : command ';' commandBlockListCont .  (24)

	.  reduce 24


state 98
	commandBlockListCont : command . ';' commandBlockListCont  (25)

	';'  shift 122
	.  error


state 99
	functParamsDefCont : ',' type IDENTIFIER functParamsDefCont .  (21)

	.  reduce 21


state 100
	expression : IDENTIFIER '[' expression . ']'  (55)
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	']'  shift 123
	.  error


state 101
	functParams : CHAR_LIT . functParamsCont  (44)
	functParamsCont : .  (48)

	','  shift 124
	')'  reduce 48

	functParamsCont  goto 125


state 102
	functParams : INT_LIT . functParamsCont  (43)
	functParamsCont : .  (48)

	','  shift 124
	')'  reduce 48

	functParamsCont  goto 126


state 103
	functParams : BOOL_LIT . functParamsCont  (46)
	functParamsCont : .  (48)

	','  shift 124
	')'  reduce 48

	functParamsCont  goto 127


state 104
	functParams : IDENTIFIER . functParamsCont  (42)
	functParamsCont : .  (48)

	','  shift 124
	')'  reduce 48

	functParamsCont  goto 128


state 105
	functParams : STRING . functParamsCont  (45)
	functParamsCont : .  (48)

	','  shift 124
	')'  reduce 48

	functParamsCont  goto 129


state 106
	functCall : IDENTIFIER '(' functParams . ')'  (41)

	')'  shift 130
	.  error


state 107
	expression : '(' expression ')' .  (49)

	.  reduce 49


108: shift/reduce conflict (shift 81, reduce 56) on EQUAL
108: shift/reduce conflict (shift 82, reduce 56) on DIFFERENT
108: shift/reduce conflict (shift 83, reduce 56) on LESS_THEN
108: shift/reduce conflict (shift 84, reduce 56) on GREATHER_THEN
108: shift/reduce conflict (shift 85, reduce 56) on OR
108: shift/reduce conflict (shift 86, reduce 56) on AND
108: shift/reduce conflict (shift 87, reduce 56) on '-'
108: shift/reduce conflict (shift 88, reduce 56) on '+'
108: shift/reduce conflict (shift 89, reduce 56) on '/'
108: shift/reduce conflict (shift 90, reduce 56) on '*'
state 108
	expression : expression . EQUAL expression  (56)
	expression : expression EQUAL expression .  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	TO  reduce 56
	ELSE  reduce 56
	CHAR_LIT  reduce 56
	INT_LIT  reduce 56
	BOOL_LIT  reduce 56
	IDENTIFIER  reduce 56
	STRING  reduce 56
	';'  reduce 56
	']'  reduce 56
	'('  reduce 56
	')'  reduce 56


109: shift/reduce conflict (shift 81, reduce 57) on EQUAL
109: shift/reduce conflict (shift 82, reduce 57) on DIFFERENT
109: shift/reduce conflict (shift 83, reduce 57) on LESS_THEN
109: shift/reduce conflict (shift 84, reduce 57) on GREATHER_THEN
109: shift/reduce conflict (shift 85, reduce 57) on OR
109: shift/reduce conflict (shift 86, reduce 57) on AND
109: shift/reduce conflict (shift 87, reduce 57) on '-'
109: shift/reduce conflict (shift 88, reduce 57) on '+'
109: shift/reduce conflict (shift 89, reduce 57) on '/'
109: shift/reduce conflict (shift 90, reduce 57) on '*'
state 109
	expression : expression . EQUAL expression  (56)
	expression : expression . DIFFERENT expression  (57)
	expression : expression DIFFERENT expression .  (57)
	expression : expression . LESS_THEN expression  (58)
	expression : expression . GREATHER_THEN expression  (59)
	expression : expression . OR expression  (60)
	expression : expression . AND expression  (61)
	expression : expression . '+' expression  (62)
	expression : expression . '-' expression  (63)
	expression : expression . '/' expression  (64)
	expression : expression . '*' expression  (65)

	EQUAL  shift 81
	DIFFERENT  shift 82
	LESS_THEN  shift 83
	GREATHER_THEN  shift 84
	OR  shift 85
	AND  shift 86
	'-'  shift 87
	'+'  shift 88
	'/'  shift 89
	'*'  shift 90
	TO  reduce 57
	ELSE  reduce 57
	CHAR_LIT  reduce 57
	INT_LIT  reduce 57
	BOOL_LIT  reduce 57
	IDENTIFIER  reduce 57
	STRING  reduce 57
	';'  reduce 57
	']'  reduce 57
	'('  reduce 57
	')'  reduce 57

